--- a/src/sass/pages/about.scss
+++ b/src/sass/pages/about.scss
@@ -57,7 +57,7 @@
         }
 
         p {
-            grid-column: 8 / 12;
+            grid-column: 9 / -1;
         }
 
         .logos {
@@ -65,6 +65,15 @@
 
             img {
                 grid-column: span 3;
+                justify-self: center;
+            }
+
+            img:nth-of-type(4n + 1) {
+                justify-self: start;
+            }
+
+            img:nth-of-type(4n) {
+                justify-self: end;
             }
         }
     }
