Additional work to updating all data calls to use get_sub_field

--- a/src/sass/layout/grids/_home-v1.0.scss
+++ b/src/sass/layout/grids/_home-v1.0.scss
@@ -89,8 +89,8 @@
 
     // specific row stylings
 
-    /* new row ------------------------------------------------------------ */
-    .row-one {
+    /* three col layout ------------------------------------------------------------ */
+    .three-cols {
         grid-template-rows: 1fr;
         margin-bottom: var(--drop-big);
 
