--- a/src/sass/tools/utilities.scss
+++ b/src/sass/tools/utilities.scss
@@ -8,6 +8,7 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
     grid-column-gap: 48px;
 }
 
