Get in touch partial set-up and styled

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -29,6 +29,7 @@
 
 //// page-sections
 @use 'page-sections/banner';
+@use 'page-sections/get-in-touch';
 
 //// post types
 @use 'post-types/work';
