Who we are text-image replaced, set-up and styled

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -23,8 +23,8 @@
 @use 'pages/archives';
 @use 'pages/archive';
 @use 'pages/our-work';
+@use 'pages/who-we-are';
 @use 'pages/what-we-do';
-@use 'pages/about';
 @use 'pages/type';
 
 //// page-sections
