--- a/src/sass/pages/_who-we-are.scss
+++ b/src/sass/pages/_who-we-are.scss
@@ -120,7 +120,7 @@
 
         .image {
             width: 340px;
-            grid-column: 8 / 12;
+            //grid-column: 8 / 12;
             align-items: center;
             transform: translateX(-38px);
         }
