Constraining width removed from .image -in text-image blocks

--- a/src/sass/pages/_what-we-do.scss
+++ b/src/sass/pages/_what-we-do.scss
@@ -228,10 +228,7 @@
         }
 
         .image {
-            width: 340px;
-            //grid-column: 8 / 12;
-            align-items: center;
-            transform: translateX(-38px);
+            // width: 100%;
         }
     }
 
