Typo in utilities corrected..

--- a/src/sass/tools/utilities.scss
+++ b/src/sass/tools/utilities.scss
@@ -12,7 +12,7 @@
     grid-column-gap: 48px;
 }
 
-// center content with a max-width pf 1440px
+// center content with a max-width of 1440px
 .contain {
     width: 100%;
     max-width: var(--site-width);
